refactor: studio 위주 번역파일 이관 / settings 쪽 이관 (.py) 제외

--- a/cms/templates/certificates.html
+++ b/cms/templates/certificates.html
@@ -54,6 +54,10 @@ CMS.User.isGlobalStaff = '${is_global_staff}'=='True' ? true : false;
         <span class="sr">&gt; </span>${_("Certificates")}
       </h1>
       <div class="preview-certificate nav-actions"></div>
+      <div style="font-size: 11px;line-height: 1.7;margin-top: 6px;float: right;width:25%; text-align: right; position: relative; bottom: -26px; background: #fff;border: 1px solid lightgray; padding:0 5px;">
+          비활성화 상태가 이수증이 발급될 수 있는 상태입니다.<br>
+          활성화로 버튼이 보일 경우 이수증이 학습자에게 보여지지 않습니다.
+        </div>
     </header>
   </div>
 
