refactor: 회원가입,로그인 부분60 % / css 적용 x

--- a/lms/templates/register.html
+++ b/lms/templates/register.html
@@ -120,12 +120,12 @@ import calendar
 
   <aside role="complementary">
 
-<%
-  # allow for theming overrides on the registration sidebars, otherwise default to pre-existing ones
-  sidebar_file = static.get_template_path('register-sidebar.html')
-%>
+##<%
+##  # allow for theming overrides on the registration sidebars, otherwise default to pre-existing ones
+##  sidebar_file = static.get_template_path('register-sidebar.html')
+##%>
 
-    <%include file="${sidebar_file}" />
+    ##<%include file="${sidebar_file}" />
 
   </aside>
 </section>
