--- a/lms/templates/main.html
+++ b/lms/templates/main.html
@@ -157,7 +157,7 @@ from pipeline_mako import render_require_js_path_overrides
     })();
     </script>
 % endif
-
+<link rel="stylesheet" type="text/css" href="/static/css/style.css?ver=1.5" />
 <% branch_key = static.get_value("BRANCH_IO_KEY", settings.BRANCH_IO_KEY) %>
 % if branch_key and not is_from_mobile_app:
     <script type="text/javascript">
