--- a/lms/templates/community/comm_tabs.html
+++ b/lms/templates/community/comm_tabs.html
@@ -4,7 +4,36 @@
 <%inherit file="../main.html" />
 <%block name="header_extras"></%block>
 <script src="${static.url('js/script/comm_tabs.js')}" charset="utf-8"></script>
+<style>
+  .faq-tab > a {
+    display: table-cell;
+    padding: 15px;
+    font-weight: 500;
+    color: #fff;
+    background: #51575a;
+    text-align: center;
+    border-left: solid 2px #fff;
+    vertical-align: middle;
+    line-height: 1.1em;
+    font-weight: 700;
+    font-size: 17px;
+}
+  .faq-list dt > a {
+    display: block;
+    padding: 12px 10px 12px 50px;
+    font-size: 1.125rem;
+    font-weight: 700;
+    line-height: 1.688em;
+    color: #333;
+}
+  a:not(.btn), a:visited:not(.btn) {
+    font-family: "Open Sans";
 
+    font: inherit;
+    text-decoration: none;
+    transition: all 0.1s linear 0s;
+}
+</style>
 <section class="container">
     <!-- [s] board write -->
     <h2 title="FAQ" id="main">FAQ</h2>
@@ -20,15 +49,15 @@
 
     <div id="head_title" style="display: none;">FAQ</div>
     <nav class="faq-tab">
-        <a href="#" class="${'on' if head_title == 'kmooc_f' else ''}" data-value="kmooc_f" title="K-MOOC">K-MOOC</a>
-        <a href="#" class="${'on' if head_title == 'regist_f' else ''}" data-value="regist_f" title="회원가입">회원가입</a>
-        <a href="#" class="${'on' if head_title == 'login_f' else ''}" data-value="login_f" title="로그인/계정">로그인/계정</a>
-        <a href="#" class="${'on' if head_title == 'enroll_f' else ''}" data-value="enroll_f" style="font-size: 15px;" title="수강신청/취소">수강신청/취소</a>
-        <a href="#" class="${'on' if head_title == 'course_f' else ''}" data-value="course_f" title="강좌 수강">강좌 수강</a>
-        <a href="#" class="${'on' if head_title == 'certi_f' else ''}" data-value="certi_f" title="성적/이수증">성적/이수증</a>
-        <a href="#" class="${'on' if head_title == 'tech_f' else ''}" data-value="tech_f" title="기술적문제">기술적 문제</a>
-        <a href="#" class="${'on' if head_title == 'mobile_f' else ''}" data-value="mobile_f" title="모바일앱">모바일앱</a>
-        <a href="#" class="${'on' if head_title == 'total_f' else ''}" data-value="total_f" title="전체보기">전체보기</a>
+        <a href="#" class="${'on' if head_title == 'kmooc_f' else ''}" data-value="kmooc_f" title="K-MOOC" style="color: #ffffff;">K-MOOC</a>
+        <a href="#" class="${'on' if head_title == 'regist_f' else ''}" data-value="regist_f" title="회원가입"style="color: #ffffff;">회원가입</a>
+        <a href="#" class="${'on' if head_title == 'login_f' else ''}" data-value="login_f" title="로그인/계정"style="color: #ffffff;">로그인/계정</a>
+        <a href="#" class="${'on' if head_title == 'enroll_f' else ''}" data-value="enroll_f" style="font-size: 15px;color: #ffffff;" title="수강신청/취소">수강신청/취소</a>
+        <a href="#" class="${'on' if head_title == 'course_f' else ''}" data-value="course_f" title="강좌 수강"style="color: #ffffff;">강좌 수강</a>
+        <a href="#" class="${'on' if head_title == 'certi_f' else ''}" data-value="certi_f" title="성적/이수증"style="color: #ffffff;">성적/이수증</a>
+        <a href="#" class="${'on' if head_title == 'tech_f' else ''}" data-value="tech_f" title="기술적문제"style="color: #ffffff;">기술적 문제</a>
+        <a href="#" class="${'on' if head_title == 'mobile_f' else ''}" data-value="mobile_f" title="모바일앱"style="color: #ffffff;">모바일앱</a>
+        <a href="#" class="${'on' if head_title == 'total_f' else ''}" data-value="total_f" title="전체보기"style="color: #ffffff;">전체보기</a>
     </nav>
 
     <dl class="faq-list" title="FAQ 목록">
