--- a/lms/templates/header/navbar-authenticated.html
+++ b/lms/templates/header/navbar-authenticated.html
@@ -26,18 +26,17 @@ from openedx.core.djangoapps.site_configuration import helpers as configuration_
     help_link = doc_link
 %>
 <style>
+  /*
   .dropdown-menu{
       width: 120px;
     display: none;
-    height: 165px;
+    #height: 165px;
     padding-top: 10px;
     margin-top: 0px;
     padding-bottom: 10px;
     margin-bottom: 0px;
   }
-  li{
-    list-style: none;
-  }
+
   .header-global .nav-global .dropdown-menu {
     position: absolute;
     left: -10px;
@@ -53,9 +52,30 @@ from openedx.core.djangoapps.site_configuration import helpers as configuration_
     border-top: 0;
     text-align: center;
   }
+  */
   .global-header{
 
   }
+  li{
+    list-style: none;
+  }
+  .dropdown-menu{
+    position:absolute;
+    z-index:1000;
+    display:none;
+    float:left;
+    min-width:10rem;
+    padding:0.5rem 0;
+    margin:0.125rem 0 0;
+    font-size:1rem;
+    color:#313131;
+    text-align:left;
+    list-style:none;
+    background-color:#fff;
+    background-clip:padding-box;
+
+    border:1px solid rgba(0,0,0,0.15);
+    border-radius:0.1875rem}
 </style>
 <div class="nav-links">
   <div class="main">
@@ -74,7 +94,7 @@ from openedx.core.djangoapps.site_configuration import helpers as configuration_
         </a>
       </div>
     <li class=" mobile-nav-item hidden-mobile nav-item nav-tab nav-item-dropdown item nav-global-04"><a href="#" class="comm_a" data-hover-label='${_("Community")}'><span class="effect_label">${_("Community")}</span></a>
-        <ul class="dropdown-menu" style="width: 200px;margin-left: -40px;">
+        <ul class="dropdown-menu" style="width: 200px;">
             <li id="menu1"><a href="/comm_list/N" >공지사항</a></li>
             <li id="menu2"><a href="/comm_list/K">K-MOOC 뉴스</a></li>
             <li id="menu3"><a href="/comm_list/R">자료실</a></li>
@@ -115,9 +135,9 @@ from openedx.core.djangoapps.site_configuration import helpers as configuration_
         </a>
       </div>
     <li class=" mobile-nav-item hidden-mobile nav-item nav-tab nav-item-dropdown item nav-global-04"><a href="#" class="comm_a" data-hover-label='${_("Community")}'><span class="effect_label">${_("Community")}</span></a>
-        <ul class="dropdown-menu" style="width: 200px;margin-left: -40px;">
+        <ul class="dropdown-menu" style="width: 200px;">
             <li id="menu1"><a href="/comm_list/N" >공지사항</a></li>
-            <li id="menu2"><a href="/comm_list/K">K-MOOC 뉴스</a></li>
+            <li id="menu2"><a href="/comm_list/K">K-MOOC 뉴스</a></li
             <li id="menu3"><a href="/comm_list/R">자료실</a></li>
             <li id="menu4"><a href="/comm_tabs/kmooc_f/">FAQ</a></li>
         </ul>
