test:testgit add .

--- a/lms/templates/dashboard.html
+++ b/lms/templates/dashboard.html
@@ -107,6 +107,12 @@ from student.models import CourseEnrollment
     %endif
 
     %if account_activation_messages:
+      <script>
+        setTimeout(function () {
+            alert('${_("Since we sent an email to activate your account, please log back in to your site via your account activation email.. Click OK button to log out automatically.")}');
+            document.location.href = "/logout";
+        }, 500);
+      </script>
       <div class="activation-message-container">
         % for account_activation_message in account_activation_messages:
           <div class="account-activation ${account_activation_message.tags}" role="alert" aria-label="Account Activation Message" tabindex="-1">
